2013-09-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* calculator.el (calculator-funcall): Fix typo in last change.

	* vc/vc-git.el (vc-git-checkin): Make it possible to commit a merge.

	* emacs-lisp/package.el (package-activate-1): Don't let a missing
	<pkg>-autoloads.el file stop us.

	* net/tramp.el (with-parsed-tramp-file-name): Silence compiler
	warnings, and factor out common code.

2013-09-03  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-calculate-indent): Consider
	two-character operators and whether the character preceding them
	changes their meaning (Bug#15208).

2013-09-02  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Format code sent to Python shell for robustness.
	* progmodes/python.el (python-shell-buffer-substring):
	New function.
	(python-shell-send-region, python-shell-send-buffer): Use it.

2013-09-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-compat.el (tramp-compat-user-error): Move it ...
	* net/tramp.el (tramp-user-error): ... here.
	(tramp-find-method, tramp-check-proper-host)
	(tramp-dissect-file-name, tramp-debug-message)
	(tramp-handle-shell-command):
	* net/tramp-adb.el (tramp-adb-handle-shell-command):
	* net/tramp-gvfs.el (tramp-gvfs-file-name-handler): Adapt callees.

	* net/tramp-cache.el (tramp-cache-print): Don't print text properties.

2013-09-02  Martin Rudalics  <rudalics@gmx.at>

	* avoid.el (mouse-avoidance-point-position)
	(mouse-avoidance-too-close-p): Handle case where posn-at-point
	returns nil.

2013-09-02  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (python-shell-completion-get-completions):
	Drop use of deleted `comint-last-prompt-overlay'.
	(python-nav-if-name-main): New command.

2013-09-01  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (setwins, setwins_almost, setwins_for_subdirs):
	Avoid leading space in $wins.  Otherwise the sed command used by
	eg compile-main ends up containing "/*.el".  (Bug#15170)
